add detail produk & produk page

--- a/css/style.css
+++ b/css/style.css
@@ -19,12 +19,22 @@
   color: white;
 }
 
+.arrow-no-decoration {
+  text-decoration: none;
+  color: black;
+}
+
 .no-decoration:hover {
   color: #6b3f6e;
 }
 
 .image-box {
   height: 250px;
+}
+
+.image-detail {
+  border-radius: 10px;
+  border: gray solid;
 }
 
 .image-box img {
@@ -36,6 +46,14 @@
 
 .banner {
   height: 80vh;
+  background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
+    url("../image/banner.png");
+  background-size: cover;
+  background-position: center 20%;
+}
+
+.banner-produk {
+  height: 45vh;
   background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
     url("../image/banner.png");
   background-size: cover;
